--- a/index.html
+++ b/index.html
@@ -7,15 +7,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fabrica de Cuchillos Artesanales</title>
-    <meta name="description"
-        content="Empresa dedicada a la fabricacion en forma artesanal de cuchillos en la zona de Pilar Buenos Aires">
-    <meta name="keywords"
-        content="cuchillos, artesania, artesanal, mates, tablas, productos, campo, parrilla, regalos empresariales">
+    <meta name="description" content="Empresa dedicada a la fabricacion en forma artesanal de cuchillos en la zona de Pilar Buenos Aires">
+    <meta name="keywords" content="cuchillos, artesania, artesanal, mates, tablas, productos, campo, parrilla, regalos empresariales">
     <meta name="author" content="Veronica Karst">
     <!--Mi CSS-->
     <link rel="stylesheet" href="css/main.css">
     <!--Bootstrap CSS-->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <!--WOW JS-->
+    <link rel="stylesheet" href="css/animate.css">
+    <script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 </head>
 
 <body>
@@ -25,9 +29,7 @@
             <a class="navbar-brand" href="./index.html">
                 <img src="./media/logo.png" alt="imagen de cuchillos cruzados">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -54,73 +56,39 @@
     </nav>
     <!--Termina Nav-->
 
-    <h1 class="text-center fst-italic ">Que Podes Encontrar en Nuestra Pagina</h1>
-
-    <!-- Inicia Carousel -->
-    <header class="w-50 mx-auto">
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./media/Baner1.jpg" class="d-block w-100"
-                        alt="imagen de cuchillo con mango blanco y la vaina">
-                    <div class="carousel-caption">
-                        <h3 class="carouselContent color3">Regalos Empresariales</h3>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="./media/Baner2.jpg" class="d-block w-100"
-                        alt="imagen de 3 cuchillos de distintas medidas">
-                    <div class="carousel-caption">
-                        <h3 class="carouselContent color">Nuestros Cuchillos</h3>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="./media/Baner3.jpg" class="d-block w-100"
-                        alt="imagen de proceso de producción artesanal de un cuchillo">
-                    <div class="carousel-caption">
-                        <h3 class="carouselContent color">Proceso de Produccion</h3>
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-    </header>
-    <!-- Termina Carousel -->
-
-    <h1 class="text-center fst-italic">Visita Nuestro Catalogo</h1>
-
     <!--Inicia Section-->
-    <section class="d-flex justify-content-center">
-        <img class="img-fluid" src="./media/fotoindex.PNG"
-            alt="imagen de cuchillo y vaina, imagen de un juego de asado e imagen de tres mates.">
-    </section>
+    <header>
+        <h1 class="wow backInDown">Bienvenidos</h1>
+    </header>
     <!--Termina Section-->
+
+    <!--Inicia Card-->
+    <div id="cardproductos" class="card mb-3" style="max-width: 70%;">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="./media/collageproductos.jpg" class="img-fluid rounded-start" alt="imagen collage de tres cuchillos de distintas medidas y modelos">
+            </div>
+            <div class="col-md-8" id="textocardproductos">
+                <div class="card-body">
+                    <h5 class="card-title">Nuestros Productos</h5>
+                    <p class="card-text">Tenemos una gran variedad de modelos, tamaños y materiales. Nuestros productos son fabricados con la mas alta calidad y la producción de los mismos es en forma artesanal. <br> Aqui puede encontrar cuchillos para cocina, para carnes,
+                        verduras; cuchillos deportivos; y mucho mas.
+                    </p>
+                    <a href="./Paginas/Productos.html" class="btn btn-primary ">Mas Informacion</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Termina Card-->
 
     <!--Inicia Footer-->
     <footer>
-        <a class="mx-3 " href="https://www.facebook.com/"><img src="./media/iconos/iconofacebook.png"
-                alt="Seguinos en facebook "></a>
-        <a class="mx-3 " href="https://www.instagram.com/"><img src="./media/iconos/iconoinstagram.png"
-                alt="Seguinos en instagram "></a>
+        <p>Redes Sociales</p>
+        <a class="mx-3 " href="https://www.facebook.com/"><img src="./media/iconos/iconofacebook.png" alt="Seguinos en facebook "></a>
+        <a class="mx-3 " href="https://www.instagram.com/"><img src="./media/iconos/iconoinstagram.png" alt="Seguinos en instagram "></a>
         <a class="mx-3 " href="# "><img src="./media/iconos/iconomail.png" alt="Envianos un e-mail "></a>
         <a class="mx-3 " href="# "><img src="./media/iconos/iconowhassap.png" alt="Envianos un whatssap "></a>
+        <p>todos los derechos reservados</p>
     </footer>
     <!--Termina Footer-->
 
