Mejoras en imagenes index

--- a/index.html
+++ b/index.html
@@ -62,15 +62,33 @@
     </header>
     <!--Termina Section-->
 
-    <!--Inicia Card-->
+    <!--Inicia Card 1-->
     <div id="cardproductos" class="card mb-3" style="max-width: 70%;">
         <div class="row g-0">
             <div class="col-md-4">
-                <img src="./media/collageproductos.jpg" class="img-fluid rounded-start" alt="imagen collage de tres cuchillos de distintas medidas y modelos">
+                <img src="./media/collagenuevosproductosindex.jpg   " class="img-fluid rounded-start" alt="imagen collage de tres cuchillos de distintas medidas y modelos">
             </div>
             <div class="col-md-8" id="textocardproductos">
                 <div class="card-body">
-                    <h5 class="card-title">Nuestros Productos</h5>
+                    <h5 class="card-title">Nuevos Productos</h5>
+                    <p class="card-text">Como novedad tenemos la incorporacion de productos nuevos, como mates, tablas de madera y los tan solicitados regalos empresariales. <br> No podes dejar de pasar por nuestra seccion de productos y ver las novedades!
+                    </p>
+                    <a href="./Paginas/Productos.html" class="btn btn-primary ">Mas Informacion</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Termina Card 1-->
+
+    <!--Inicia Card 2-->
+    <div id="cardproductos" class="card mb-3" style="max-width: 70%;">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="./media/collageproductosindex.jpg" class="img-fluid rounded-start" alt="imagen collage de tres cuchillos de distintas medidas y modelos">
+            </div>
+            <div class="col-md-8" id="textocardproductos">
+                <div class="card-body">
+                    <h5 class="card-title">Nuestros Cuchillos</h5>
                     <p class="card-text">Tenemos una gran variedad de modelos, tamaños y materiales. Nuestros productos son fabricados con la mas alta calidad y la producción de los mismos es en forma artesanal. <br> Aqui puede encontrar cuchillos para cocina, para carnes,
                         verduras; cuchillos deportivos; y mucho mas.
                     </p>
@@ -79,7 +97,25 @@
             </div>
         </div>
     </div>
-    <!--Termina Card-->
+    <!--Termina Card 2-->
+
+    <!--Inicia Card 3-->
+    <div id="cardproductos" class="card mb-3" style="max-width: 70%;">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="./media/collageblogindex.jpg" class="img-fluid rounded-start" alt="imagen collage de tres cuchillos de distintas medidas y modelos">
+            </div>
+            <div class="col-md-8" id="textocardproductos">
+                <div class="card-body">
+                    <h5 class="card-title">Visitá Nuestro Blog</h5>
+                    <p class="card-text">En nuestro blog podras encontrar los ultimos temas de interes del rubro y los mas interesantes debates. No te pierdas las ultimas opiniones de los expertos!
+                    </p>
+                    <a href="./Paginas/Blog.html" class="btn btn-primary ">Mas Informacion</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!--Termina Card 3-->
 
     <!--Inicia Footer-->
     <footer>
