--- a/index.html
+++ b/index.html
@@ -14,66 +14,58 @@
     <link rel="stylesheet" href="css/main.css">
     <!--Bootstrap CSS-->
     <link rel="stylesheet" href="./css/bootstrap.min.css">
-    <!--WOW JS-->
-    <link rel="stylesheet" href="css/animate.css">
-    <script src="js/wow.min.js"></script>
-    <script>
-        new WOW().init();
-    </script>
 </head>
 
 <body>
     <!--Inicia Nav-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-black">
         <div class="container-fluid">
             <a class="navbar-brand" href="./index.html">
-                <img src="./media/logo.png" alt="imagen de cuchillos cruzados">
+                <img src="./media/logo1.png" alt="imagen de cuchillos cruzados">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="./Paginas/Nosotros.html">Nosotros</a>
+                        <a class="nav-link text-white" aria-current="page" href="./Paginas/Nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./Paginas/Productos.html">Productos</a>
+                        <a class="nav-link text-white" href="./Paginas/Productos.html">Productos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./Paginas/Blog.html">Blog</a>
+                        <a class="nav-link text-white" href="./Paginas/Blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./Paginas/Contacto.html">Contacto</a>
+                        <a class="nav-link text-white" href="./Paginas/Contacto.html">Contacto</a>
                     </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Buscar">
-                    <button class="btn btn-outline-success" type="submit">Buscar</button>
-                </form>
             </div>
         </div>
     </nav>
     <!--Termina Nav-->
 
     <!--Inicia Section-->
-    <header>
-        <h1 class="wow backInDown">Bienvenidos</h1>
-    </header>
+    <div id="header">
+        <img src="./media/banner.jpg" class="card-img" alt="...">
+    </div>
     <!--Termina Section-->
 
     <!--Inicia Card 1-->
-    <div id="cardproductos" class="card mb-3" style="max-width: 70%;">
+    <div id="cardproductos" class="card mb-3" style="max-width: 100%;">
         <div class="row g-0">
             <div class="col-md-4">
-                <img src="./media/collagenuevosproductosindex.jpg   " class="img-fluid rounded-start" alt="imagen collage de tres cuchillos de distintas medidas y modelos">
+                <img src="./media/collageproductosnuevosindex1.jpg" class="img-fluid rounded-start" alt="imagen collage de tres cuchillos de distintas medidas y modelos">
             </div>
             <div class="col-md-8" id="textocardproductos">
                 <div class="card-body">
                     <h5 class="card-title">Nuevos Productos</h5>
+                    <br>
                     <p class="card-text">Como novedad tenemos la incorporacion de productos nuevos, como mates, tablas de madera y los tan solicitados regalos empresariales. <br> No podes dejar de pasar por nuestra seccion de productos y ver las novedades!
                     </p>
-                    <a href="./Paginas/Productos.html" class="btn btn-primary ">Mas Informacion</a>
+                    <br>
+                    <a href="./Paginas/Productos.html" id="botonproductosindex" class="btn btn-primary ">Mas Informacion</a>
                 </div>
             </div>
         </div>
@@ -81,17 +73,19 @@
     <!--Termina Card 1-->
 
     <!--Inicia Card 2-->
-    <div id="cardproductos" class="card mb-3" style="max-width: 70%;">
+    <div id="cardproductos" class="card mb-3" style="max-width: 100%;">
         <div class="row g-0">
             <div class="col-md-4">
-                <img src="./media/collageproductosindex.jpg" class="img-fluid rounded-start" alt="imagen collage de tres cuchillos de distintas medidas y modelos">
+                <img src="./media/collageproductosindex1.jpg" class="img-fluid rounded-start" alt="imagen collage de tres cuchillos de distintas medidas y modelos">
             </div>
             <div class="col-md-8" id="textocardproductos">
                 <div class="card-body">
                     <h5 class="card-title">Nuestros Cuchillos</h5>
+                    <br>
                     <p class="card-text">Tenemos una gran variedad de modelos, tamaños y materiales. Nuestros productos son fabricados con la mas alta calidad y la producción de los mismos es en forma artesanal. <br> Aqui puede encontrar cuchillos para cocina, para carnes,
                         verduras; cuchillos deportivos; y mucho mas.
                     </p>
+                    <br>
                     <a href="./Paginas/Productos.html" class="btn btn-primary ">Mas Informacion</a>
                 </div>
             </div>
@@ -100,7 +94,7 @@
     <!--Termina Card 2-->
 
     <!--Inicia Card 3-->
-    <div id="cardproductos" class="card mb-3" style="max-width: 70%;">
+    <div id="cardproductos" class="card mb-3" style="max-width: 100%;">
         <div class="row g-0">
             <div class="col-md-4">
                 <img src="./media/collageblogindex.jpg" class="img-fluid rounded-start" alt="imagen collage de tres cuchillos de distintas medidas y modelos">
@@ -108,8 +102,10 @@
             <div class="col-md-8" id="textocardproductos">
                 <div class="card-body">
                     <h5 class="card-title">Visitá Nuestro Blog</h5>
+                    <br>
                     <p class="card-text">En nuestro blog podras encontrar los ultimos temas de interes del rubro y los mas interesantes debates. No te pierdas las ultimas opiniones de los expertos!
                     </p>
+                    <br>
                     <a href="./Paginas/Blog.html" class="btn btn-primary ">Mas Informacion</a>
                 </div>
             </div>
@@ -120,11 +116,11 @@
     <!--Inicia Footer-->
     <footer>
         <p>Redes Sociales</p>
-        <a class="mx-3 " href="https://www.facebook.com/"><img src="./media/iconos/iconofacebook.png" alt="Seguinos en facebook "></a>
-        <a class="mx-3 " href="https://www.instagram.com/"><img src="./media/iconos/iconoinstagram.png" alt="Seguinos en instagram "></a>
-        <a class="mx-3 " href="# "><img src="./media/iconos/iconomail.png" alt="Envianos un e-mail "></a>
-        <a class="mx-3 " href="# "><img src="./media/iconos/iconowhassap.png" alt="Envianos un whatssap "></a>
-        <p>todos los derechos reservados</p>
+        <a class="mx-3 " href="https://www.facebook.com/"><img src="./media/iconos/facebook.jpg" alt="Seguinos en facebook "></a>
+        <a class="mx-3 " href="https://www.instagram.com/"><img src="./media/iconos/instagram.jpg" alt="Seguinos en instagram "></a>
+        <a class="mx-3 " href="# "><img src="./media/iconos/mail.jpg" alt="Envianos un e-mail "></a>
+        <a class="mx-3 " href="# "><img src="./media/iconos/whassap.jpg" alt="Envianos un whatssap "></a>
+        <p id="derechos">Mi Cuchillo © 2021. Todos los Derechos Reservados.</p>
     </footer>
     <!--Termina Footer-->
 
