Cambios de color y fotos en todas las paginas

--- a/Paginas/Productos.html
+++ b/Paginas/Productos.html
@@ -19,33 +19,29 @@
 
 <body>
     <!--Inicia Nav-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-black">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
-                <img src="../media/logo.png" alt="imagen de cuchillos cruzados">
+                <img src="../media/logo1.png" alt="imagen de cuchillos cruzados">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="./Nosotros.html">Nosotros</a>
+                        <a class="nav-link text-white" aria-current="page" href="../Paginas/Nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="./Productos.html">Productos</a>
+                        <a class="nav-link text-white" href="../Paginas/Productos.html">Productos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./Blog.html">Blog</a>
+                        <a class="nav-link text-white" href="../Paginas/Blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./Contacto.html">Contacto</a>
+                        <a class="nav-link text-white" href="../Paginas/Contacto.html">Contacto</a>
                     </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Buscar">
-                    <button class="btn btn-outline-success" type="submit">Buscar</button>
-                </form>
             </div>
         </div>
     </nav>
@@ -65,14 +61,14 @@
     </section>
     <!--Termina Breadcrumb-->
 
-    <h1 class="fst-italic text-center">Nuestros Cuchillos</h1>
+    <h1 class="fst-italic text-center">Nuestros Cuchillos, Navajas y Revanadores</h1>
 
     <!--Inicia Productos 1-->
-    <section>
+    <section id="productos1">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
-                    <img src="../media/CuchilloChico.jpg" class="card-img-top scale" alt="imagen de cuchillo de tamaño chico con mango de madera ">
+                    <img src="../media/cuchillo3.jpg" class="card-img-top scale" alt="imagen de cuchillo de tamaño chico con mango de madera ">
                     <div class="card-body ">
                         <h5 class="card-title ">Chico</h5>
                         <p class="card-text ">Cuchillo chico con mango de madera ideal para quesos.</p>
@@ -80,7 +76,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
-                    <img src="../media/CuchilloMediano.jpg" class="card-img-top scale" alt="imagen de cuchillo de tamaño mediano con mango de madera ">
+                    <img src="../media/cuchillo2.jpg" class="card-img-top scale" alt="imagen de cuchillo de tamaño mediano con mango de madera ">
                     <div class="card-body ">
                         <h5 class="card-title ">Mediano</h5>
                         <p class="card-text ">Cuchillo mediano con mango de madera ideal para verduras.</p>
@@ -88,7 +84,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
-                    <img src="../media/CuchilloGrande.jpg" class="card-img-top scale" alt="imagen de cuchillo de tamaño grande con mango de acrilico negro ">
+                    <img src="../media/cuhillo4.jpg" class="card-img-top scale" alt="imagen de cuchillo de tamaño grande con mango de acrilico negro ">
                     <div class="card-body ">
                         <h5 class="card-title ">Grande</h5>
                         <p class="card-text ">Cuchillo grande con mango de acrilico negro ideal para carnes.</p>
@@ -96,10 +92,10 @@
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
-                    <img src="../media/CuchilloDeportivo.jpg" class="card-img-top scale" alt="imagen de cuchillo deportivo de tamaño chico con mango de acrilico negro ">
+                    <img src="../media/cuchillo1.jpg" class="card-img-top scale" alt="imagen de cuchillo deportivo de tamaño chico con mango de acrilico negro ">
                     <div class="card-body ">
                         <h5 class="card-title ">Deportivo</h5>
-                        <p class="card-text ">Cuchillo deportivo chico con mango de acrilico negro. Viene con kit de viaje</p>
+                        <p class="card-text ">Cuchillo deportivo chico con mango de acrilico marron.</p>
                         <a href="../media/CuchilloDeportivo.jpg" class="btn btn-primary ">Comprar</a>
                     </div>
                 </div>
@@ -108,38 +104,98 @@
     </section>
     <!--Termina Productos 1-->
 
-    <h1 class="fst-italic text-center">Nuevos Productos</h1>
-
-    <!--Icinia Productos 2-->
-    <div class="container">
-        <div class="row">
-            <div class="card col-6 text-center">
-                <img src="../media/Mates.png" class="card-img-top " alt="imagenes de mates de distintos modelos y colores">
-                <div class="card-body ">
-                    <h5 class="card-title ">Mates</h5>
-                    <p class="card-text">Mates artesanales de diferentes colores y tamaños</p>
-                    <a href="./Productos.html" class="btn btn-primary ">Comprar</a>
+    <!--Inicia Productos 2-->
+    <section id="productos2">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <img src="../media/navaja1n.jpg" class="card-img-top scale" alt="imagen de cuchillo de tamaño chico con mango de madera ">
+                    <div class="card-body ">
+                        <h5 class="card-title ">Navaja Grande</h5>
+                        <p class="card-text ">Navaja grande con mango de metal en color marron y negro.</p>
+                        <a href="" class="btn btn-primary ">Comprar</a>
+                    </div>
                 </div>
-            </div>
-            <div class="card col-6 text-center">
-                <img src="../media/Tablas.png" class="card-img-top " alt="imagenes de tablas de madera de diferentes medidas y formas ">
-                <div class="card-body ">
-                    <h5 class="card-title">Tablas</h5>
-                    <p class="card-text ">Tablas de madera de diferentes formas y medidas</p>
-                    <a href="./Productos.html " class="btn btn-primary ">Comprar</a>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <img src="../media/navaja2n.jpg" class="card-img-top scale" alt="imagen de cuchillo de tamaño mediano con mango de madera ">
+                    <div class="card-body ">
+                        <h5 class="card-title ">Navaja chica</h5>
+                        <p class="card-text ">Navaja grande con mango de metal en color blanco y gris.</p>
+                        <a href="" class="btn btn-primary ">Comprar</a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <img src="../media/revanador1n.jpg" class="card-img-top scale" alt="imagen de cuchillo de tamaño grande con mango de acrilico negro ">
+                    <div class="card-body ">
+                        <h5 class="card-title ">Revanador Grande</h5>
+                        <p class="card-text ">Revanador grande con mango de metal, ideal para panes.</p>
+                        <a href="" class="btn btn-primary ">Comprar</a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <img src="../media/revanador2n.jpg" class="card-img-top scale" alt="imagen de cuchillo deportivo de tamaño chico con mango de acrilico negro ">
+                    <div class="card-body ">
+                        <h5 class="card-title ">Revanador Mediano</h5>
+                        <p class="card-text ">Revanador mediano con mango de metal, ideal para fiambres.</p>
+                        <a href="../media/CuchilloDeportivo.jpg" class="btn btn-primary ">Comprar</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-
+    </section>
     <!--Termina Productos 2-->
+
+    <h1>Nuevos Productos</h1>
+
+    <!--Inicia Nuevos Productos -->
+    <section id="productos3">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <img src="../media/nuevosproductos1.jpg" class="card-img-top scale" alt="imagen de cuchillo de tamaño chico con mango de madera ">
+                    <div class="card-body ">
+                        <h5 class="card-title ">Regalos <span class="badge bg-danger">NEW</span></h5>
+                        <p class="card-text ">Cuchillo chico con mango de madera ideal para quesos.</p>
+                        <a href="" class="btn btn-primary ">Comprar</a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <img src="../media/nuevosproductos2.jpg" class="card-img-top scale" alt="imagen de cuchillo de tamaño mediano con mango de madera ">
+                    <div class="card-body ">
+                        <h5 class="card-title ">Mates <span class="badge bg-danger">NEW</span></h5>
+                        <p class="card-text ">Cuchillo mediano con mango de madera ideal para verduras.</p>
+                        <a href="" class="btn btn-primary ">Comprar</a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <img src="../media/nuevosproductos3.jpg" class="card-img-top scale" alt="imagen de cuchillo de tamaño grande con mango de acrilico negro ">
+                    <div class="card-body ">
+                        <h5 class="card-title ">Equipos <span class="badge bg-danger">NEW</span></h5>
+                        <p class="card-text ">Cuchillo grande con mango de acrilico negro ideal para carnes.</p>
+                        <a href="" class="btn btn-primary ">Comprar</a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <img src="../media/nuevosproductos4.jpg" class="card-img-top scale" alt="imagen de cuchillo deportivo de tamaño chico con mango de acrilico negro ">
+                    <div class="card-body ">
+                        <h5 class="card-title ">Llaveros <span class="badge bg-danger">NEW</span></h5>
+                        <p class="card-text ">Cuchillo deportivo chico con mango de acrilico negro.</p>
+                        <a href="../media/CuchilloDeportivo.jpg" class="btn btn-primary ">Comprar</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--Termina Nuevos Productos -->
 
     <!--Inicia Footer-->
     <footer>
-        <a class="mx-3 " href="https://www.facebook.com/"><img src="../media/iconos/iconofacebook.png" alt="Seguinos en facebook "></a>
-        <a class="mx-3 " href="https://www.instagram.com/"><img src="../media/iconos/iconoinstagram.png" alt="Seguinos en instagram "></a>
-        <a class="mx-3 " href="# "><img src="../media/iconos/iconomail.png" alt="Envianos un e-mail "></a>
-        <a class="mx-3 " href="# "><img src="../media/iconos/iconowhassap.png" alt="Envianos un whatssap "></a>
+        <p>Redes Sociales</p>
+        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/facebook.jpg" alt="Seguinos en facebook "></a>
+        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/instagram.jpg" alt="Seguinos en instagram "></a>
+        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/mail.jpg" alt="Envianos un e-mail "></a>
+        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/whassap.jpg" alt="Envianos un whatssap "></a>
+        <p id="derechos">Mi Cuchillo © 2021. Todos los Derechos Reservados.</p>
     </footer>
     <!--Termina Footer-->
 
