--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
     <div id="cardproductos" class="card mb-3" style="max-width: 100%;">
         <div class="row g-0">
             <div class="col-md-4">
-                <img src="./media/collageproductosnuevosindex1.jpg" class="img-fluid rounded-start" alt="imagen collage de tres cuchillos de distintas medidas y modelos">
+                <img src="./media/collage1.jpg" class="img-fluid rounded-start" alt="imagen collage de tres cuchillos de distintas medidas y modelos">
             </div>
             <div class="col-md-8" id="textocardproductos">
                 <div class="card-body">
-                    <h5 class="card-title">Nuevos Productos</h5>
+                    <h5 class="card-title">Nuevos Productos <span class="badge bg-danger">NEW</span></h5>
                     <br>
                     <p class="card-text">Como novedad tenemos la incorporacion de productos nuevos, como mates, tablas de madera y los tan solicitados regalos empresariales. <br> No podes dejar de pasar por nuestra seccion de productos y ver las novedades!
                     </p>
@@ -76,7 +76,7 @@
     <div id="cardproductos" class="card mb-3" style="max-width: 100%;">
         <div class="row g-0">
             <div class="col-md-4">
-                <img src="./media/collageproductosindex1.jpg" class="img-fluid rounded-start" alt="imagen collage de tres cuchillos de distintas medidas y modelos">
+                <img src="./media/collage2.jpg" class="img-fluid rounded-start" alt="imagen collage de tres cuchillos de distintas medidas y modelos">
             </div>
             <div class="col-md-8" id="textocardproductos">
                 <div class="card-body">
@@ -116,10 +116,10 @@
     <!--Inicia Footer-->
     <footer>
         <p>Redes Sociales</p>
-        <a class="mx-3 " href="https://www.facebook.com/"><img src="./media/iconos/facebook.jpg" alt="Seguinos en facebook "></a>
-        <a class="mx-3 " href="https://www.instagram.com/"><img src="./media/iconos/instagram.jpg" alt="Seguinos en instagram "></a>
-        <a class="mx-3 " href="# "><img src="./media/iconos/mail.jpg" alt="Envianos un e-mail "></a>
-        <a class="mx-3 " href="# "><img src="./media/iconos/whassap.jpg" alt="Envianos un whatssap "></a>
+        <a class="mx-3 " href="./Paginas/Error404.html"><img src="./media/iconos/facebook.jpg" alt="Seguinos en facebook "></a>
+        <a class="mx-3 " href="./Paginas/Error404.html"><img src="./media/iconos/instagram.jpg" alt="Seguinos en instagram "></a>
+        <a class="mx-3 " href="./Paginas/Error404.html"><img src="./media/iconos/mail.jpg" alt="Envianos un e-mail "></a>
+        <a class="mx-3 " href="./Paginas/Error404.html"><img src="./media/iconos/whassap.jpg" alt="Envianos un whatssap "></a>
         <p id="derechos">Mi Cuchillo © 2021. Todos los Derechos Reservados.</p>
     </footer>
     <!--Termina Footer-->
