--- a/Paginas/Blog.html
+++ b/Paginas/Blog.html
@@ -19,33 +19,29 @@
 <body>
 
     <!--Inicia Nav-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-black">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
-                <img src="../media/logo.png" alt="imagen de cuchillos cruzados">
+                <img src="../media/logo1.png" alt="imagen de cuchillos cruzados">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="./Nosotros.html">Nosotros</a>
+                        <a class="nav-link text-white" aria-current="page" href="../Paginas/Nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./Productos.html">Productos</a>
+                        <a class="nav-link text-white" href="../Paginas/Productos.html">Productos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="./Blog.html">Blog</a>
+                        <a class="nav-link text-white" href="../Paginas/Blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./Contacto.html">Contacto</a>
+                        <a class="nav-link text-white" href="../Paginas/Contacto.html">Contacto</a>
                     </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Buscar">
-                    <button class="btn btn-outline-success" type="submit">Buscar</button>
-                </form>
             </div>
         </div>
     </nav>
@@ -65,30 +61,51 @@
     </section>
     <!--Termina Breadcrumb-->
 
-    <h1 class="fst-italic text-center ">Blog</h1>
+    <h1>Blog</h1>
 
     <!-- Inicia Cards -->
-    <section>
+    <section id="blog">
         <div class="container ">
-            <div class="row ">
-                <div class="col-lg-4 pb-5 bg-blue text-center ">
-                    <h3>LOS MEJORES SOPORTES JAMONEROS ¿CÓMO ELEGIRLOS?</h3>
-                    <p>El soporte jamonero es un elemento imprescindible para cualquier amante del jamón, pero ¿Cómo elijo el mejor soporte jamonero para mí?</p>
-                    <img class="w-80 h-40 " src="../media/soportejamonero.jpg " alt="Imagen de un soporte jamonero en blanco y negro ">
-                    <button class="boton1 ">Ver mas</button>
+            <div class="row row-cols-1 row-cols-md-2 g-4">
+                <div class="col">
+                    <div class="card">
+                        <img src="../media/imagenblog4.jpg" class="card-img-top" alt="Imagen de un soporte jamonero en blanco y negro">
+                        <div class="card-body">
+                            <h5 class="card-title">LOS MEJORES SOPORTES JAMONEROS ¿CÓMO ELEGIRLOS?</h5>
+                            <p class="card-text">El soporte jamonero es un elemento imprescindible para cualquier amante del jamón, pero ¿Cómo elijo el mejor soporte jamonero para mí? Existen muchos tipos de …</p>
+                            <button class="boton1">Leer mas</button>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-4 pb-5 bg-yellow text-center ">
-                    <h3>NAVAJAS HECHAS A MANO ¡UN REGALO ÚNICO Y EXCLUSIVO!</h3>
-                    <p>Antiguamente las navajas hechas a mano eran una de las herramientas favoritas más utilizadas por los agricultores y ganaderos, toda una tradición entre ellos. Regalar un cuchillo o navaja artesanal simboliza la unión y amistad entre
-                        las dos personas, el regalo perfecto.</p>
-                    <img class="w-80 h-40 " src="../media/imagennavajas.jpg " alt="Foto de cuatro navajas de distintos colores ">
-                    <button class="boton1 ">Ver mas</button>
+                <div class="col">
+                    <div class="card">
+                        <img src="../media/imagenblog1.jpg" class="card-img-top" alt="imagen de una persona cocinando con un cuchillo grande y unos tomates en la mesa">
+                        <div class="card-body">
+                            <h5 class="card-title">CUCHILLOS PROFESIONALES PARA CHEF ¿CÓMO ELEGIRLOS?</h5>
+                            <p class="card-text">Si eres un profesional de la cocina este post está hecho para ti. Existen infinidad de tipos de cuchillos que varían en función de la …</p>
+                            <button class="boton1 ">Leer mas</button>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-lg-4 bg-green text-center ">
-                    <h3>COMO COMPRAR CUCHILLERÍA ONLINE DE CALIDAD</h3>
-                    <p>Existen cientos de cuchillos, y cada uno de ellos para una utilidad distinta. Por eso, hemos creado una mini guía informativa sobre los tipos de cuchillos que existen y la utilidad de cada uno de ellos.</p>
-                    <img class="w-80 h-40 " src="../media/imagenescuchillosvarios.png " alt="Imagenes de varios cuchillos de distintos tamaños ">
-                    <button class="boton1 ">Ver mas</button>
+                <div class="col">
+                    <div class="card">
+                        <img src="../media/imagenblog2.png" class="card-img-top" alt="imagen de un cuchillo clavado en un arbol">
+                        <div class="card-body">
+                            <h5 class="card-title">CUCHILLERÍA DEPORTIVA ¿QUÉ ES? ¿QUÉ TIPOS DE CUCHILLOS EXISTEN?</h5>
+                            <p class="card-text">En los últimos años ha tomado especial relevancia la cuchillería deportiva, pero, ¿Exactamente sabes a que hace referencia? Desde Cuchillería Teodomiro queremos que poco a …</p>
+                            <button class="boton1 ">Leer mas</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card">
+                        <img src="../media/imagenblog3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">TIPOS DE CUCHILLOS DE COCINA Y SUS USOS</h5>
+                            <p class="card-text">En varios de nuestros post anteriores ya te hemos hablado por ejemplo de cómo elegir el mejor cuchillo de cocina o cómo debes cuidarlos para …</p>
+                            <button class="boton1 ">Leer mas</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -97,10 +114,12 @@
 
     <!--Inicia Footer-->
     <footer>
-        <a class="mx-3 " href="https://www.facebook.com/ "><img src="../media/iconos/iconofacebook.png " alt="Seguinos en facebook "></a>
-        <a class="mx-3 " href="https://www.instagram.com/ "><img src="../media/iconos/iconoinstagram.png " alt="Seguinos en instagram "></a>
-        <a class="mx-3 " href="# "><img src="../media/iconos/iconomail.png " alt="Envianos un e-mail "></a>
-        <a class="mx-3 " href="# "><img src="../media/iconos/iconowhassap.png " alt="Envianos un whatssap "></a>
+        <p>Redes Sociales</p>
+        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/facebook.jpg" alt="Seguinos en facebook "></a>
+        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/instagram.jpg" alt="Seguinos en instagram "></a>
+        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/mail.jpg" alt="Envianos un e-mail "></a>
+        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/whassap.jpg" alt="Envianos un whatssap "></a>
+        <p id="derechos">Mi Cuchillo © 2021. Todos los Derechos Reservados.</p>
     </footer>
     <!--Termina Footer-->
 
