--- a/Paginas/Contacto.html
+++ b/Paginas/Contacto.html
@@ -19,33 +19,29 @@
 
 <body>
     <!--Inicia Nav-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-black">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
-                <img src="../media/logo.png" alt="imagen de cuchillos cruzados">
+                <img src="../media/logo1.png" alt="imagen de cuchillos cruzados">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="./Nosotros.html">Nosotros</a>
+                        <a class="nav-link text-white" aria-current="page" href="../Paginas/Nosotros.html">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./Productos.html">Productos</a>
+                        <a class="nav-link text-white" href="../Paginas/Productos.html">Productos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./Blog.html">Blog</a>
+                        <a class="nav-link text-white" href="../Paginas/Blog.html">Blog</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="./Contacto.html">Contacto</a>
+                        <a class="nav-link text-white" href="../Paginas/Contacto.html">Contacto</a>
                     </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Buscar">
-                    <button class="btn btn-outline-success" type="submit">Buscar</button>
-                </form>
             </div>
         </div>
     </nav>
@@ -132,10 +128,12 @@
 
     <!--Inicia Footer-->
     <footer>
-        <a class="mx-3 " href="https://www.facebook.com/"><img src="../media/iconos/iconofacebook.png" alt="Seguinos en facebook "></a>
-        <a class="mx-3 " href="https://www.instagram.com/"><img src="../media/iconos/iconoinstagram.png" alt="Seguinos en instagram "></a>
-        <a class="mx-3 " href="# "><img src="../media/iconos/iconomail.png" alt="Envianos un e-mail "></a>
-        <a class="mx-3 " href="# "><img src="../media/iconos/iconowhassap.png" alt="Envianos un whatssap "></a>
+        <p>Redes Sociales</p>
+        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/facebook.jpg" alt="Seguinos en facebook "></a>
+        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/instagram.jpg" alt="Seguinos en instagram "></a>
+        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/mail.jpg" alt="Envianos un e-mail "></a>
+        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/whassap.jpg" alt="Envianos un whatssap "></a>
+        <p id="derechos">Mi Cuchillo © 2021. Todos los Derechos Reservados.</p>
     </footer>
     <!--Termina Footer-->
 
