cambios en todas las paginas y carpeta media

--- a/Paginas/Error404.html
+++ b/Paginas/Error404.html
@@ -18,9 +18,9 @@
 
     <section id="error404">
         <img src="../media/logo.png" alt="">
-        <h3>ERROR 404</h3>
-        <h4>No hemos encontrado la página que estás buscando</h4>
-        <h5>Te invitamos a volver a la página de Mi Cuchillo</h5>
+        <h3 id="error404textos">ERROR 404</h3>
+        <h4 id="error404textos">No hemos encontrado la página que estás buscando</h4>
+        <h5 id="error404textos">Te invitamos a volver a la página de Mi Cuchillo</h5>
         <li>
             <a href="../index.html">Inicio</a>
         </li>
@@ -36,6 +36,10 @@
         <li>
             <a href="../Paginas/Contacto.html">Contacto</a>
         </li>
+        <br>
+        <br>
+        <br>
+        <br>
     </section>
 
     <script src="../css/bootstrap.min.js"></script>
