--- a/Paginas/Productos.html
+++ b/Paginas/Productos.html
@@ -19,29 +19,21 @@
 
 <body>
     <!--Inicia Nav-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-black">
+    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
                 <img src="../media/logo1.png" alt="imagen de cuchillos cruzados">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link text-white" aria-current="page" href="../Paginas/Nosotros.html">Nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="../Paginas/Productos.html">Productos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="../Paginas/Blog.html">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="../Paginas/Contacto.html">Contacto</a>
-                    </li>
-                </ul>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link" aria-current="page" href="../Paginas/Nosotros.html">Nosotros</a>
+                    <a class="nav-link active" href="../Paginas/Productos.html">Productos</a>
+                    <a class="nav-link" href="../Paginas/Blog.html">Blog</a>
+                    <a class="nav-link" href="../Paginas/Contacto.html">Contacto</a>
+                </div>
             </div>
         </div>
     </nav>
@@ -87,7 +79,7 @@
                     <img src="../media/cuhillo4.jpg" class="card-img-top scale" alt="imagen de cuchillo de tamaño grande con mango de acrilico negro ">
                     <div class="card-body ">
                         <h5 class="card-title ">Grande</h5>
-                        <p class="card-text ">Cuchillo grande con mango de acrilico negro ideal para carnes.</p>
+                        <p class="card-text ">Cuchillo grande con mango de acrilico blanco ideal para carnes.</p>
                         <a href="" class="btn btn-primary ">Comprar</a>
                     </div>
                 </div>
@@ -120,7 +112,7 @@
                     <img src="../media/navaja2n.jpg" class="card-img-top scale" alt="imagen de cuchillo de tamaño mediano con mango de madera ">
                     <div class="card-body ">
                         <h5 class="card-title ">Navaja chica</h5>
-                        <p class="card-text ">Navaja grande con mango de metal en color blanco y gris.</p>
+                        <p class="card-text ">Navaja chica con mango de metal en color blanco y gris.</p>
                         <a href="" class="btn btn-primary ">Comprar</a>
                     </div>
                 </div>
@@ -155,7 +147,7 @@
                     <img src="../media/nuevosproductos1.jpg" class="card-img-top scale" alt="imagen de cuchillo de tamaño chico con mango de madera ">
                     <div class="card-body ">
                         <h5 class="card-title ">Regalos <span class="badge bg-danger">NEW</span></h5>
-                        <p class="card-text ">Cuchillo chico con mango de madera ideal para quesos.</p>
+                        <p class="card-text ">Juego de tabla y asador en funda de cuero marron.</p>
                         <a href="" class="btn btn-primary ">Comprar</a>
                     </div>
                 </div>
@@ -163,7 +155,7 @@
                     <img src="../media/nuevosproductos2.jpg" class="card-img-top scale" alt="imagen de cuchillo de tamaño mediano con mango de madera ">
                     <div class="card-body ">
                         <h5 class="card-title ">Mates <span class="badge bg-danger">NEW</span></h5>
-                        <p class="card-text ">Cuchillo mediano con mango de madera ideal para verduras.</p>
+                        <p class="card-text ">Mates de distintos colores y tamaños.</p>
                         <a href="" class="btn btn-primary ">Comprar</a>
                     </div>
                 </div>
@@ -171,7 +163,7 @@
                     <img src="../media/nuevosproductos3.jpg" class="card-img-top scale" alt="imagen de cuchillo de tamaño grande con mango de acrilico negro ">
                     <div class="card-body ">
                         <h5 class="card-title ">Equipos <span class="badge bg-danger">NEW</span></h5>
-                        <p class="card-text ">Cuchillo grande con mango de acrilico negro ideal para carnes.</p>
+                        <p class="card-text ">Equipos de mate forrados en distintos materiales.</p>
                         <a href="" class="btn btn-primary ">Comprar</a>
                     </div>
                 </div>
@@ -179,7 +171,7 @@
                     <img src="../media/nuevosproductos4.jpg" class="card-img-top scale" alt="imagen de cuchillo deportivo de tamaño chico con mango de acrilico negro ">
                     <div class="card-body ">
                         <h5 class="card-title ">Llaveros <span class="badge bg-danger">NEW</span></h5>
-                        <p class="card-text ">Cuchillo deportivo chico con mango de acrilico negro.</p>
+                        <p class="card-text ">Llaveros de alpaca con diferentes motivos.</p>
                         <a href="../media/CuchilloDeportivo.jpg" class="btn btn-primary ">Comprar</a>
                     </div>
                 </div>
@@ -191,10 +183,10 @@
     <!--Inicia Footer-->
     <footer>
         <p>Redes Sociales</p>
-        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/facebook.jpg" alt="Seguinos en facebook "></a>
-        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/instagram.jpg" alt="Seguinos en instagram "></a>
-        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/mail.jpg" alt="Envianos un e-mail "></a>
-        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/whassap.jpg" alt="Envianos un whatssap "></a>
+        <a class="mx-3 " href="../Paginas/Error404.html"><img src="../media/iconos/facebook.jpg" alt="Seguinos en facebook "></a>
+        <a class="mx-3 " href="../Paginas/Error404.html"><img src="../media/iconos/instagram.jpg" alt="Seguinos en instagram "></a>
+        <a class="mx-3 " href="../Paginas/Error404.html"><img src="../media/iconos/mail.jpg" alt="Envianos un e-mail "></a>
+        <a class="mx-3 " href="../Paginas/Error404.html"><img src="../media/iconos/whassap.jpg" alt="Envianos un whatssap "></a>
         <p id="derechos">Mi Cuchillo © 2021. Todos los Derechos Reservados.</p>
     </footer>
     <!--Termina Footer-->
