--- a/index.html
+++ b/index.html
@@ -18,54 +18,47 @@
 
 <body>
     <!--Inicia Nav-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-black">
+    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="./index.html">
                 <img src="./media/logo1.png" alt="imagen de cuchillos cruzados">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link text-white" aria-current="page" href="./Paginas/Nosotros.html">Nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="./Paginas/Productos.html">Productos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="./Paginas/Blog.html">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="./Paginas/Contacto.html">Contacto</a>
-                    </li>
-                </ul>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link" aria-current="page" href="./Paginas/Nosotros.html">Nosotros</a>
+                    <a class="nav-link" href="./Paginas/Productos.html">Productos</a>
+                    <a class="nav-link" href="./Paginas/Blog.html">Blog</a>
+                    <a class="nav-link" href="./Paginas/Contacto.html">Contacto</a>
+                </div>
             </div>
         </div>
     </nav>
     <!--Termina Nav-->
 
     <!--Inicia Section-->
-    <div id="header">
-        <img src="./media/banner.jpg" class="card-img" alt="...">
+    <div class="header">
+        <img src="./media/banner.jpg " class="card-img " alt="... ">
     </div>
     <!--Termina Section-->
 
     <!--Inicia Card 1-->
-    <div id="cardproductos" class="card mb-3" style="max-width: 100%;">
-        <div class="row g-0">
-            <div class="col-md-4">
-                <img src="./media/collage1.jpg" class="img-fluid rounded-start" alt="imagen collage de tres cuchillos de distintas medidas y modelos">
+    <div id="cardproductos" class="card mb-3" style="max-width: 100%; ">
+        <div class="row g-0 ">
+            <div class="col-md-4 ">
+                <img src="./media/collage2.jpg " class="img-fluid rounded-start " alt="imagen collage de tres cuchillos de distintas medidas y modelos ">
             </div>
-            <div class="col-md-8" id="textocardproductos">
-                <div class="card-body">
-                    <h5 class="card-title">Nuevos Productos <span class="badge bg-danger">NEW</span></h5>
-                    <br>
-                    <p class="card-text">Como novedad tenemos la incorporacion de productos nuevos, como mates, tablas de madera y los tan solicitados regalos empresariales. <br> No podes dejar de pasar por nuestra seccion de productos y ver las novedades!
+            <div class="col-md-8 ">
+                <div id="textocardproductos" class="card-body ">
+                    <h5 class="card-title">Nuestros Cuchillos</h5>
+                    <br> <br>
+                    <p class="card-text ">Tenemos una gran variedad de modelos, tamaños y materiales. Nuestros productos son fabricados con la mas alta calidad y la producción de los mismos es en forma artesanal. <br> Aqui puede encontrar cuchillos para cocina, para carnes,
+                        verduras; cuchillos deportivos; y mucho mas.
                     </p>
-                    <br>
-                    <a href="./Paginas/Productos.html" id="botonproductosindex" class="btn btn-primary ">Mas Informacion</a>
+                    <br> <br>
+                    <a href="./Paginas/Productos.html " class="btn btn-primary ">Mas Informacion</a>
                 </div>
             </div>
         </div>
@@ -73,20 +66,19 @@
     <!--Termina Card 1-->
 
     <!--Inicia Card 2-->
-    <div id="cardproductos" class="card mb-3" style="max-width: 100%;">
-        <div class="row g-0">
-            <div class="col-md-4">
-                <img src="./media/collage2.jpg" class="img-fluid rounded-start" alt="imagen collage de tres cuchillos de distintas medidas y modelos">
+    <div id="cardproductos" class="card mb-3" style="max-width: 100%; ">
+        <div class="row g-0 ">
+            <div class="col-md-4 ">
+                <img src="./media/collage1.jpg " class="img-fluid rounded-start " alt="imagen collage de tres cuchillos de distintas medidas y modelos ">
             </div>
-            <div class="col-md-8" id="textocardproductos">
-                <div class="card-body">
-                    <h5 class="card-title">Nuestros Cuchillos</h5>
-                    <br>
-                    <p class="card-text">Tenemos una gran variedad de modelos, tamaños y materiales. Nuestros productos son fabricados con la mas alta calidad y la producción de los mismos es en forma artesanal. <br> Aqui puede encontrar cuchillos para cocina, para carnes,
-                        verduras; cuchillos deportivos; y mucho mas.
+            <div class="col-md-8 ">
+                <div id="textocardproductos" class="card-body ">
+                    <h5 class="card-title">Nuevos Productos <span class="badge bg-danger ">NEW</span></h5>
+                    <br> <br>
+                    <p class="card-text">Como novedad tenemos la incorporacion de productos nuevos, como mates, tablas de madera y los tan solicitados regalos empresariales. <br> No podes dejar de pasar por nuestra seccion de productos y ver las novedades!
                     </p>
-                    <br>
-                    <a href="./Paginas/Productos.html" class="btn btn-primary ">Mas Informacion</a>
+                    <br> <br>
+                    <a href="./Paginas/Productos.html " class="btn btn-primary ">Mas Informacion</a>
                 </div>
             </div>
         </div>
@@ -94,19 +86,19 @@
     <!--Termina Card 2-->
 
     <!--Inicia Card 3-->
-    <div id="cardproductos" class="card mb-3" style="max-width: 100%;">
-        <div class="row g-0">
-            <div class="col-md-4">
-                <img src="./media/collageblogindex.jpg" class="img-fluid rounded-start" alt="imagen collage de tres cuchillos de distintas medidas y modelos">
+    <div id="cardproductos" class="card mb-3" style="max-width: 100%; ">
+        <div class="row g-0 ">
+            <div class="col-md-4 ">
+                <img src="./media/collageblogindex.jpg " class="img-fluid rounded-start " alt="imagen collage de tres cuchillos de distintas medidas y modelos ">
             </div>
-            <div class="col-md-8" id="textocardproductos">
-                <div class="card-body">
-                    <h5 class="card-title">Visitá Nuestro Blog</h5>
-                    <br>
-                    <p class="card-text">En nuestro blog podras encontrar los ultimos temas de interes del rubro y los mas interesantes debates. No te pierdas las ultimas opiniones de los expertos!
+            <div class="col-md-8 ">
+                <div id="textocardproductos" class="card-body ">
+                    <h5 class="card-title ">Visitá Nuestro Blog</h5>
+                    <br> <br>
+                    <p class="card-text ">En nuestro blog podras encontrar los ultimos temas de interes del rubro y los mas interesantes debates. No te pierdas las ultimas opiniones de los expertos!
                     </p>
-                    <br>
-                    <a href="./Paginas/Blog.html" class="btn btn-primary ">Mas Informacion</a>
+                    <br> <br>
+                    <a href="./Paginas/Blog.html " class="btn btn-primary ">Mas Informacion</a>
                 </div>
             </div>
         </div>
@@ -116,15 +108,15 @@
     <!--Inicia Footer-->
     <footer>
         <p>Redes Sociales</p>
-        <a class="mx-3 " href="./Paginas/Error404.html"><img src="./media/iconos/facebook.jpg" alt="Seguinos en facebook "></a>
-        <a class="mx-3 " href="./Paginas/Error404.html"><img src="./media/iconos/instagram.jpg" alt="Seguinos en instagram "></a>
-        <a class="mx-3 " href="./Paginas/Error404.html"><img src="./media/iconos/mail.jpg" alt="Envianos un e-mail "></a>
-        <a class="mx-3 " href="./Paginas/Error404.html"><img src="./media/iconos/whassap.jpg" alt="Envianos un whatssap "></a>
-        <p id="derechos">Mi Cuchillo © 2021. Todos los Derechos Reservados.</p>
+        <a class="mx-3 " href="./Paginas/Error404.html "><img src="./media/iconos/facebook.jpg " alt="Seguinos en facebook "></a>
+        <a class="mx-3 " href="./Paginas/Error404.html "><img src="./media/iconos/instagram.jpg " alt="Seguinos en instagram "></a>
+        <a class="mx-3 " href="./Paginas/Error404.html "><img src="./media/iconos/mail.jpg " alt="Envianos un e-mail "></a>
+        <a class="mx-3 " href="./Paginas/Error404.html "><img src="./media/iconos/whassap.jpg " alt="Envianos un whatssap "></a>
+        <p id="derechos ">Mi Cuchillo © 2021. Todos los Derechos Reservados.</p>
     </footer>
     <!--Termina Footer-->
 
-    <script src="./css/bootstrap.min.js"></script>
+    <script src="./css/bootstrap.min.js "></script>
 </body>
 
 </html>
