--- a/Paginas/Blog.html
+++ b/Paginas/Blog.html
@@ -19,29 +19,21 @@
 <body>
 
     <!--Inicia Nav-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-black">
+    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
                 <img src="../media/logo1.png" alt="imagen de cuchillos cruzados">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link text-white" aria-current="page" href="../Paginas/Nosotros.html">Nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="../Paginas/Productos.html">Productos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="../Paginas/Blog.html">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="../Paginas/Contacto.html">Contacto</a>
-                    </li>
-                </ul>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link" aria-current="page" href="../Paginas/Nosotros.html">Nosotros</a>
+                    <a class="nav-link" href="../Paginas/Productos.html">Productos</a>
+                    <a class="nav-link active" href="../Paginas/Blog.html">Blog</a>
+                    <a class="nav-link" href="../Paginas/Contacto.html">Contacto</a>
+                </div>
             </div>
         </div>
     </nav>
@@ -115,10 +107,10 @@
     <!--Inicia Footer-->
     <footer>
         <p>Redes Sociales</p>
-        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/facebook.jpg" alt="Seguinos en facebook "></a>
-        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/instagram.jpg" alt="Seguinos en instagram "></a>
-        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/mail.jpg" alt="Envianos un e-mail "></a>
-        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/whassap.jpg" alt="Envianos un whatssap "></a>
+        <a class="mx-3 " href="../Paginas/Error404.html"><img src="../media/iconos/facebook.jpg" alt="Seguinos en facebook "></a>
+        <a class="mx-3 " href="../Paginas/Error404.html"><img src="../media/iconos/instagram.jpg" alt="Seguinos en instagram "></a>
+        <a class="mx-3 " href="../Paginas/Error404.html"><img src="../media/iconos/mail.jpg" alt="Envianos un e-mail "></a>
+        <a class="mx-3 " href="../Paginas/Error404.html"><img src="../media/iconos/whassap.jpg" alt="Envianos un whatssap "></a>
         <p id="derechos">Mi Cuchillo © 2021. Todos los Derechos Reservados.</p>
     </footer>
     <!--Termina Footer-->
