--- a/Paginas/Contacto.html
+++ b/Paginas/Contacto.html
@@ -19,29 +19,21 @@
 
 <body>
     <!--Inicia Nav-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-black">
+    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
                 <img src="../media/logo1.png" alt="imagen de cuchillos cruzados">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link text-white" aria-current="page" href="../Paginas/Nosotros.html">Nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="../Paginas/Productos.html">Productos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="../Paginas/Blog.html">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="../Paginas/Contacto.html">Contacto</a>
-                    </li>
-                </ul>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link" aria-current="page" href="../Paginas/Nosotros.html">Nosotros</a>
+                    <a class="nav-link" href="../Paginas/Productos.html">Productos</a>
+                    <a class="nav-link" href="../Paginas/Blog.html">Blog</a>
+                    <a class="nav-link active" href="../Paginas/Contacto.html">Contacto</a>
+                </div>
             </div>
         </div>
     </nav>
@@ -62,66 +54,30 @@
     <!--Termina Breadcrumb-->
 
     <!--Inicia Planilla de Contacto-->
-    <div class="contact_form">
 
-        <div class="formulario">
-            <h2 class="color2 text-center">Formulario de contacto</h2>
-            <h3 class="text-center">Escríbenos y en breve los pondremos en contacto contigo</h3>
-
-
-            <form action="submeter-formulario.php" method="post">
-
-
-                <p>
-                    <label for="nombre" class="colocar_nombre">Nombre
-                        <span class="obligatorio">*</span>
-                      </label>
-                    <input type="text" name="introducir_nombre" id="nombre" required="obligatorio" placeholder="Escribe tu nombre">
-                </p>
-
-                <p>
-                    <label for="email" class="colocar_email">Email
-                        <span class="obligatorio">*</span>
-                      </label>
-                    <input type="email" name="introducir_email" id="email" required="obligatorio" placeholder="Escribe tu Email">
-                </p>
-
-                <p>
-                    <label for="telefone" class="colocar_telefono">Teléfono
-                      </label>
-                    <input type="tel" name="introducir_telefono" id="telefono" placeholder="Escribe tu teléfono">
-                </p>
-
-                <p>
-                    <label for="website" class="colocar_website">Sitio web
-                      </label>
-                    <input type="url" name="introducir_website" id="website" placeholder="Escribe la URL de tu web">
-                </p>
-
-                <p>
-                    <label for="asunto" class="colocar_asunto">Asunto
-                        <span class="obligatorio">*</span>
-                      </label>
-                    <input type="text" name="introducir_asunto" id="assunto" required="obligatorio" placeholder="Escribe un asunto">
-                </p>
-
-                <p>
-                    <label for="mensaje" class="colocar_mensaje">Mensaje
-                        <span class="obligatorio">*</span>
-                      </label>
-                    <textarea name="introducir_mensaje" class="texto_mensaje" id="mensaje" required="obligatorio" placeholder="Deja aquí tu comentario..."></textarea>
-                </p>
-
-                <button class="boton2" type="submit" name="enviar_formulario" id="enviar"><p>Enviar</p></button>
-
-                <p class="aviso">
-                    <span class="obligatorio"> * </span>los campos son obligatorios.
-                </p>
-
-            </form>
+    <section class="formulario">
+        <h2 class="text-center">Formulario de Contacto</h2>
+        <div class="container fluid">
+            <div class="row">
+                <article class="col-lg-6">
+                    <form>
+                        <input class="form-control" type="text" placeholder="Nombre">
+                        <input class="form-control my-3" type="text" placeholder="Email">
+                        <input class="form-control" type="text" placeholder="Telefono">
+                        <input class="form-control my-3" type="text" placeholder="Asunto">
+                        <textarea class="form-control" placeholder="Mensaje"></textarea>
+                        <div class="d-grid gap-2 p-2">
+                            <button class="btn btn-primary" type="button">Enviar</button>
+                        </div>
+                    </form>
+                </article>
+                <article class="col-lg-6">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3290.7834325913586!2d-58.843655285033044!3d-34.4322557559524!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc9c326c9a663b%3A0x5f53a9e7c0baa35f!2sJos%C3%A9%20Verdi%20%26%20Chile%2C%20La%20Lonja%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1630951167015!5m2!1ses!2sar"
+                        width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </article>
+            </div>
         </div>
-    </div>
-
+    </section>
 
 
     <!--Termina Planilla de Contacto-->
@@ -129,15 +85,15 @@
     <!--Inicia Footer-->
     <footer>
         <p>Redes Sociales</p>
-        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/facebook.jpg" alt="Seguinos en facebook "></a>
-        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/instagram.jpg" alt="Seguinos en instagram "></a>
-        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/mail.jpg" alt="Envianos un e-mail "></a>
-        <a class="mx-3 " href="./Paginas/Error404.html"><img src="../media/iconos/whassap.jpg" alt="Envianos un whatssap "></a>
-        <p id="derechos">Mi Cuchillo © 2021. Todos los Derechos Reservados.</p>
+        <a class="mx-3 " href="./Paginas/Error404.html "><img src="../media/iconos/facebook.jpg " alt="Seguinos en facebook "></a>
+        <a class="mx-3 " href="./Paginas/Error404.html "><img src="../media/iconos/instagram.jpg " alt="Seguinos en instagram "></a>
+        <a class="mx-3 " href="./Paginas/Error404.html "><img src="../media/iconos/mail.jpg " alt="Envianos un e-mail "></a>
+        <a class="mx-3 " href="./Paginas/Error404.html "><img src="../media/iconos/whassap.jpg " alt="Envianos un whatssap "></a>
+        <p id="derechos ">Mi Cuchillo © 2021. Todos los Derechos Reservados.</p>
     </footer>
     <!--Termina Footer-->
 
-    <script src="../css/bootstrap.min.js"></script>
+    <script src="../css/bootstrap.min.js "></script>
 </body>
 
 </html>
