--- a/Paginas/Nosotros.html
+++ b/Paginas/Nosotros.html
@@ -18,29 +18,21 @@
 
 <body>
     <!--Inicia Nav-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-black">
+    <nav class="navbar navbar-expand-lg navbar navbar-dark bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" href="../index.html">
                 <img src="../media/logo1.png" alt="imagen de cuchillos cruzados">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link text-white" aria-current="page" href="../Paginas/Nosotros.html">Nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="../Paginas/Productos.html">Productos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="./Paginas/Blog.html">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white" href="../Paginas/Contacto.html">Contacto</a>
-                    </li>
-                </ul>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="../Paginas/Nosotros.html">Nosotros</a>
+                    <a class="nav-link" href="../Paginas/Productos.html">Productos</a>
+                    <a class="nav-link" href="../Paginas/Blog.html">Blog</a>
+                    <a class="nav-link" href="../Paginas/Contacto.html">Contacto</a>
+                </div>
             </div>
         </div>
     </nav>
@@ -60,28 +52,45 @@
     </section>
     <!--Termina Breadcrumb-->
 
-    <h1 class="fst-italic text-center">Nuestra Empresa</h1>
+    <h1>Nuestra Empresa</h1>
 
-    <!--Inicia Section-->
-    <section>
+    <!--Inicia Section 1-->
+    <section class="nosotros">
         <div class="container-fluid">
             <div class="row centrado">
                 <article class="col-lg-8 text-center">
                     <p>Nuestros cuchillos son realizados en Entre Ríos, Argentina. Utilizamos acero inoxidable, al agua, 420 molibdeno vanadio español, de una dureza similar al acero 440 o quirúrgico, pero con la ductilidad de ser afilado con chaira o piedra.
                         Encabados en madera Guayubira o Asta de ciervo de volteo. Templado, revenido, pulido y afilado de manera artesanal. <br> Las vainas de cuero son diseñadas especialmente para cada modelo con protección de costuras en el filo. <br>                        Buscamos combinar la tradición cuchillera clásica argentina con la modernización en la comunicación y las ventas online. Y que de esa manera puedas adquirir un producto con historia de forma fácil, cómoda y rápida. <br> La Empresa
                         sigue manteniendo el sabor de antaño, cuando el tiempo era lo menos importante, si ello conllevaba hacer una buena herramienta de calidad. Los filos cortantes son de acero carbono o acero inoxidable de la marca “bellota” que proviene
-                        del país vasco. Las empuñaduras o mangos de madera de encina o formica, según sean navajas o cuchillos, logrando una pieza característica. <br> De esta forma la industria de Teodomiro continua con la tercera generación, la de sus
-                        nietos, Teodomiro, Francisco, Juan y Victoriano, a pesar de la automatización del sector y exigencias del mercado. La experiencia artesanal junto a la nobleza de los materiales acreditan a esta empresa, caracterizada por su originalidad
-                        y exclusividad a la hora de fabricar navajas. La calidad tanto de las hojas de acero “bellota” que pasan de una a una por la fragua para conseguir el punto exacto del temple, como el acabado de la empuñadura fabricada con madera
-                        de encina y su proceso de afilado que es manual a piedra de esmeril, garantizan un producto único en cualquiera de sus variedades, ya sea la cabritera, taponera, barriguda o de corte recto.</p>
+                        del país vasco. Las empuñaduras o mangos de madera de encina o formica, según sean navajas o cuchillos, logrando una pieza característica. <br> De esta forma la industria de Mi Cuchillo continua con la tercera generación, la de
+                        sus nietos, Teodomiro, Francisco, Juan y Victoriano, a pesar de la automatización del sector y exigencias del mercado. La experiencia artesanal junto a la nobleza de los materiales acreditan a esta empresa, caracterizada por su
+                        originalidad y exclusividad a la hora de fabricar navajas. La calidad tanto de las hojas de acero “bellota” que pasan de una a una por la fragua para conseguir el punto exacto del temple, como el acabado de la empuñadura fabricada
+                        con madera de encina y su proceso de afilado que es manual a piedra de esmeril, garantizan un producto único en cualquiera de sus variedades, ya sea la cabritera, taponera, barriguda o de corte recto.</p>
                 </article>
                 <article class="col-lg-4 d-flex">
-                    <iframe class="m-auto" width="300" height="300" src="https://www.youtube.com/embed/9DyhgI3qsxA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="m-auto" width="100%" height="100%" src="https://www.youtube.com/embed/9DyhgI3qsxA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </article>
             </div>
         </div>
     </section>
-    <!--Termina Section-->
+    <!--Termina Section 1-->
+
+    <h2>Galería</h2>
+
+    <!--Inicia Section 2-->
+    <div class="row pb-4">
+        <article class="col-lg-4">
+            <img src="../media/instalaciones/1.jpg" class="img-fluid" alt="...">
+        </article>
+        <article class="col-lg-4">
+            <img src="../media/instalaciones/2.jpg" class="img-fluid" alt="...">
+        </article>
+        <article class="col-lg-4">
+            <img src="../media/instalaciones/3.jpg" class="img-fluid" alt="...">
+        </article>
+    </div>
+
+    <!--Termina Section 2-->
 
     <!--Inicia Footer-->
     <footer>
